// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroCard Component should toggle the stats card on click 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "#66ccff",
      }
    }
  >
    <div
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="soldier76 icon"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "backgroundColor": "lightgrey",
            "float": "left",
            "height": "60px",
            "width": "60px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "s-resize",
            "display": "flex",
            "flexDirection": "column",
            "width": "240px",
          }
        }
      >
        <div>
          <div>
            <b>
              PwNShoPP#1662
            </b>
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Rank:
            </b>
             2733
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Hours Played:
            </b>
             
            4
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Win Rate:
            </b>
             
            90.9
            %
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroCard Component should toggle the stats card on click 2`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "#66ccff",
      }
    }
  >
    <div
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="soldier76 icon"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "backgroundColor": "lightgrey",
            "float": "left",
            "height": "60px",
            "width": "60px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "s-resize",
            "display": "flex",
            "flexDirection": "column",
            "width": "240px",
          }
        }
      >
        <div>
          <div>
            <b>
              PwNShoPP#1662
            </b>
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Rank:
            </b>
             2733
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Hours Played:
            </b>
             
            4
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Win Rate:
            </b>
             
            90.9
            %
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "height": "56px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
          9.16
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "50%",
              }
            }
          />
        </div>
        <div>
          Eliminations
        </div>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
          3.26
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "75%",
              }
            }
          />
        </div>
        <div>
          K/D ratio
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "56px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
          43
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "60%",
              }
            }
          />
        </div>
        <div>
          Accuracy
        </div>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
          0
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "0%",
              }
            }
          />
        </div>
        <div>
          Blocked / Min
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "56px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
          0
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "25%",
              }
            }
          />
        </div>
        <div>
          Healing / Min
        </div>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
          1305.59
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "90%",
              }
            }
          />
        </div>
        <div>
          Damage / Min
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "height": "56px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
          9.16
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "50%",
              }
            }
          />
        </div>
        <div>
          Obj. Kills
        </div>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "white",
            "float": "left",
            "height": "46px",
            "textAlign": "left",
            "width": "120px",
          }
        }
      >
        <div>
          53.32
        </div>
        <div
          style={
            Object {
              "backgroundColor": "lightgrey",
              "height": "5px",
              "width": "90px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "blue",
                "height": "5px",
                "width": "65%",
              }
            }
          />
        </div>
        <div>
          Obj. Time
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroCard Component should toggle the stats card on click 3`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "#66ccff",
      }
    }
  >
    <div
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="soldier76 icon"
        src={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "backgroundColor": "lightgrey",
            "float": "left",
            "height": "60px",
            "width": "60px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "s-resize",
            "display": "flex",
            "flexDirection": "column",
            "width": "240px",
          }
        }
      >
        <div>
          <div>
            <b>
              PwNShoPP#1662
            </b>
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Rank:
            </b>
             2733
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Hours Played:
            </b>
             
            4
          </div>
        </div>
        <div
          style={
            Object {
              "height": "20px",
            }
          }
        >
          <div>
            <b>
              Win Rate:
            </b>
             
            90.9
            %
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
